UI fixes: grid columns, security section, left-aligned titles, spacing

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -20,6 +20,7 @@ body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 a {
@@ -84,21 +85,24 @@ p {
   width: 100%;
   max-width: $container-max;
   margin: 0 auto;
-  padding: 0 $spacing-md;
+  padding-left: 16px;
+  padding-right: 16px;
   
   @media (min-width: $breakpoint-md) {
-    padding: 0 $spacing-xl;
+    padding-left: $spacing-xl;
+    padding-right: $spacing-xl;
   }
 }
 
 // Section
 .section {
-  padding: $spacing-3xl 0;
+  padding-top: $spacing-3xl;
+  padding-bottom: $spacing-3xl;
 }
 
 .section-title {
-  text-align: center;
-  margin-bottom: $spacing-2xl;
+  text-align: left;
+  margin-bottom: 24px;
 }
 
 // Visually hidden (for accessibility)
